--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "vue-print-handsontable",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "description": "vue print with handsontable",
+  "main":"lib/vue-print-handsontable.umd.min.js",
+  "keyword":"vue print handsontable",
+  "author":"jefferyxzf",
+  "private": false,
+  "license":"MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name vue-print-handsontable --dest lib print/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
