--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "vue-print-handsontable",
   "version": "0.0.2",
   "description": "vue print with handsontable",
-  "main":"lib/vue-print-handsontable.umd.min.js",
-  "keyword":"vue print handsontable",
-  "author":"jefferyxzf",
+  "main": "lib/vue-print-handsontable.umd.min.js",
+  "keyword": "vue print handsontable",
+  "author": "jefferyxzf",
   "private": false,
-  "license":"MIT",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,6 +14,7 @@
     "lib": "vue-cli-service build --target lib --name vue-print-handsontable --dest lib packages/index.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.7",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
@@ -29,6 +30,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
